--- a/worker/package.json
+++ b/worker/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "algosdk": "^1.19.1",
     "bs58": "^5.0.0",
+    "decimal.js": "^10.4.0",
     "dotenv": "^16.0.1",
     "halfmoon-cross-bridge-common": "file:../common",
     "halfmoon-cross-bridge-database": "file:../database",
