--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.test
+.env.testnet
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
