--- a/worker/package.json
+++ b/worker/package.json
@@ -20,6 +20,7 @@
     "near-api-js": "^1.0.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.23",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
