--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.testnet
+.env.mainnet
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
